--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "nextjs-ssg-blog",
+  "name": "learn-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.13.0",
     "gray-matter": "^4.0.2",
-    "marked": "^0.8.2",
-    "next": "9.3.4",
+    "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2"
   }
 }
